--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -589,7 +589,7 @@ A different approach, also leading to an extended Higgs sector with
 respect to the \ac{SM}, is found in \acp{2HDM} \cite{2HDM-I,2HDM-II}.
 As the name suggests \acp{2HDM} are a generic class of models in which
 there is not one, but two Higgs doublets. The addition of a second
-Higgs doublet can not just be motivated by \ac{SUSY}, but also by other models.
+Higgs doublet cannot just be motivated by \ac{SUSY}, but also by other models.
 An important point is that despite the presence of a second 
 Higgs doublet, there are no explicit \ac{SUSY} particles in the \ac{2HDM}.
 
@@ -936,7 +936,7 @@ of tau leptons sets the most stringent limits at high \tanb, with searches for
 heavy Higgs bosons decaying to $\Pbottom\Pbottom$ and to $\mu\mu$ both excluding smaller parts of the high-\tanb~region.
 Searches for heavy Higgs bosons decaying to $\PW\PW$ and $\PZ\PZ$ are able to exclude part of the low-\tanb~region. In the 
 hMSSM scenario searches for \Htohh and \AtoZh can exclude a small area at low \tanb~and between \mA~$=250$--$350\,\GeV$.
-The red exclusion contour in figure \ref{fig:bsm_summary}b is the reinterpretation of the analysis presented in
+The red exclusion contour in figure \ref{fig:bsm_summary}b is the reinterpretation of the \Htohhtobbtautau analysis presented in
 chapter \ref{chap:hhh}.
 
 Since the restart of the \acs{LHC} in 2015 searches for \AHtotautau, setting more stringent limits than those shown in figure \ref{fig:bsm_summary},
