--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -41,29 +41,33 @@ a two Higgs doublet model.
 
 % Declaration
 \begin{declaration}
-%  \vspace*{1cm}
   I declare that the work in this thesis is mine. Figures and results taken from other sources
 include the appropriate reference in the text or figure caption. Figures labelled `CMS' are sourced
 directly from CMS publications. The `CMS Preliminary' label indicates figures which
 have been made public via a preliminary public document or a public website, but are not
 included in a publication in a peer-reviewed journal. Figures labelled `CMS' or `CMS preliminary', 
 including those made by myself, include the relevant reference in the figure caption.
-The work for the analyses presented in chapters~\ref{chap:hhh} and \ref{chap:mssm} was 
+Chapters \ref{chap:theory}--\ref{chap:objects} do not contain original work by myself, however they 
+give information on the theoretical background, the CMS detector and the standard reconstruction algorithms
+used within the CMS collaboration which underpin my own work described in later chapters.
+The work for the \Htohhtobbtautau and \AHtotautau analyses presented in chapters~\ref{chap:hhh} and \ref{chap:mssm} was 
 carried out as part of the CMS \Htotautau working group, and in collaboration with other members of the group.
-For the results presented in chapter \ref{chap:hhh} I contributed to the data analysis of two out of three
-final states presented in the final public result, and I 
-was responsible for the statistical inference. This included
+For the results of the \Htohhtobbtautau analysis I contributed to the data analysis of the \etau and \mutau
+final states of the di-tau pair. I 
+was responsible for the statistical inference of the analyses in the \etau, \mutau and \tautau final states
+of the di-tau pair. This included
 the interpretation of the results in MSSM and 2HDM benchmark scenarios. The 
-work is included in reference \cite{CMS-HIG-14-034}. For the results presented in chapter~\ref{chap:mssm}
+work is included in reference \cite{CMS-HIG-14-034}. For the results of the \AHtotautau analysis
 I was responsible for all stages of the analysis, including the optimisation
 of object selection and event categorisation, as well as studies of background
-methods for three out of four final states in the public result,
-evaluation of systematic uncertainties in all four final states, and production of the statistical
+methods for the \etau, \mutau and \tautau final states in the public result,
+evaluation of systematic uncertainties in the \etau, \mutau, \tautau and \emu final states, and production of the statistical
 results, including model interpretations. This work is included in the most recent
 preliminary result \cite{CMS-PAS-HIG-16-037}, as well as a predating preliminary
 result using a smaller dataset \cite{CMS-PAS-HIG-16-006}.
-The work presented in chapter~\ref{sec:mssm_combination} has
+The work on the combination of \AHtotautau analyses presented in chapter~\ref{sec:mssm_combination} has
 not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and \cite{CMS-PAS-HIG-16-006}.
+\enlargethispage{2\baselineskip}
 
   \begin{flushright}
   Adinda de Wit
